--- a/charts/forms-flow-bpm/templates/configmap.yaml
+++ b/charts/forms-flow-bpm/templates/configmap.yaml
@@ -31,8 +31,8 @@ data:
   mail-config.properties: |
     # send mails via SMTP
     mail.transport.protocol=smtp
-    mail.smtp.host={{ .Values.mail.smtp.server }}
-    mail.smtp.port={{ .Values.mail.smtp.port }}
+    mail.smtp.host={{ ternary (tpl (.Values.mail.smtp.server | quote) .) "<DEFINE_ME>" (not (empty .Values.mail.smtp.server)) }}
+    mail.smtp.port={{ ternary (tpl (.Values.mail.smtp.port | quote) .) (randNumeric 3) (not (empty .Values.mail.smtp.port)) }}
     mail.smtp.auth=true
     mail.smtp.ssl.enable=true
     mail.smtp.socketFactory.port=465
@@ -44,13 +44,14 @@ data:
     mail.imaps.timeout=1000
     # additional config
     #mail.poll.folder=INBOX
-    mail.sender={{ .Values.mail.from }}
+    mail.sender={{ ternary (tpl (.Values.mail.from | quote) .) "<DEFINE_ME>" (not (empty .Values.mail.from)) }}
     mail.sender.alias=DoNotReply
     mail.attachment.download=true
     mail.attachment.path=attachments
     # credentials
-    mail.user={{ .Values.mail.user }}
-    mail.password={{ .Values.mail.password }}
+    mail.user={{ ternary (tpl (.Values.mail.user | quote) .) "<DEFINE_ME>" (not (empty .Values.mail.user)) }}
+    mail.password={{ ternary (tpl (.Values.mail.password | quote) .) (randAlphaNum 5 | quote) (not (empty .Values.mail.password)) }}
+
 kind: ConfigMap
 metadata:
   labels:
